fix overflow from blockqoute

--- a/style.scss
+++ b/style.scss
@@ -222,6 +222,7 @@ blockquote {
   padding: 0 1rem 0 0;
   margin: 0 2rem 1rem 0;
   border-right: .2em solid $blockquote-border-color;
+  overflow: hidden;
 
   p {
     color: $blockquote-color;
